libs/extractor/tests/snapshots/snapshots/extractor__tests__wrong_styled_with_variable_like_emotion_props-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {styled} from '@devup-ui/core'\n        const StyledDiv = styled(\"div\", \"span\").filter(Boolean)\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "const StyledDiv = styled(\"div\", \"span\").filter(Boolean);\n",
}
